--- a/style.css
+++ b/style.css
@@ -38,3 +38,27 @@
 	margin-left: 14%;
     margin-right: 14%;
 }
+.add-delete-btns-container{
+	width: auto;
+    height: auto;
+    align-content: center;
+}
+.add-delete-btns-container div{
+	margin-left: 40%;
+    margin-right: 15%;
+    font-size: 1rem;
+    font-family: sans-serif;
+    font-weight: 550;
+}
+.btn-dark{
+     /*margin-right:10%;*/
+     /*width: 5rem;*/
+}
+.btn-dark{
+	/*margin-left:10%;*/
+	/*width: 5rem;*/
+}
+.mg5px{
+	margin-left:2px;
+	margin-right: 3px;
+}
